compiler/tests/success/subarrays/x86-64/index_var.jazz
// checks that using a variable as index in a subarray is ok
export fn main (reg u64 i) -> reg u64 {
  stack u64[4] s;
  reg ptr u64[1] r;
  reg u64 res;

  s[i] = 0;
  r = s[i:1];
  res = r[0];

  return res;
}
